5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1811_2564.log
== SUBMITION (2019-06-13 09:16:13) 
-- CODE:
from numpy import*
time1=array(eval(input("digite o numero:")))
time2=array(eval(input("digite o numero:")))
resultado= time1-time2
a=0
b=0
c=0
for i in resultado:
	if(i==0):
		c=c+1
	elif(i>0):
		a=a+1
	else:
		b=b+1
a=zeros(3,dtype=int)
d=[0]=a
d=[1]=b
d=[2]=c
print(d)


-- EXECUTION TIME:
0.809639
-- ERROR:
  File "/home/codebench/codes/1811/2564/main.py", line 16
    d=[0]=a
     ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:16:32) 
-- CODE:
from numpy import*
time1=array(eval(input("digite o numero:")))
time2=array(eval(input("digite o numero:")))
resultado= time1-time2
a=0
b=0
c=0
for i in resultado:
	if(i==0):
		c=c+1
	elif(i>0):
		a=a+1
	else:
		b=b+1
a=zeros(3,dtype=int)
d=[0]=a
d=[1]=b
d=[2]=c
print(d)


-- ERROR:
File "XXXX", line 16
    d=[0]=a
     ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:17:33) 
-- CODE:
from numpy import*
time1=array(eval(input("digite o numero:")))
time2=array(eval(input("digite o numero:")))
resultado= time1-time2
a=0
b=0
c=0
for i in resultado:
	if(i==0):
		c=c+1
	elif(i>0):
		a=a+1
	else:
		b=b+1
a=zeros(3,dtype=int)
d[0]=a
d[1]=b
d[2]=c
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:23) 
-- CODE:
from numpy import*
time1=array(eval(input("digite o numero:")))
time2=array(eval(input("digite o numero:")))
resultado= time1-time2
a=0
b=0
c=0
for i in resultado:
	if(i==0):
		c=c+1
	elif(i>0):
		a=a+1
	else:
		b=b+1
d=zeros(3,dtype=int)
d[0]=a
d[1]=c
d[2]=b
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:20:12) 
-- CODE:
from numpy import*
time1=array(eval(input("digite o numero:")))
time2=array(eval(input("digite o numero:")))
resultado= time1-time2
a=0
b=0
c=0
for i in resultado:
	if(i==0):
		c=c+1
	elif(i>0):
		a=a+1
	else:
		b=b+1
d=zeros(3,dtype=int)
d[0]=a
d[1]=c
d[2]=b
print(d)


-- EXECUTION TIME:
0.967674
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
